tests/test0149.ctr
#NOAST
#Test Parser error
a is ( 3 + 2.
